BugFix: Fix hatch build config

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,5 +16,15 @@ email = ""
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
+[tool.hatch.build]
+include = [
+    "src/oceanbase_mcp_server/**/*.py",
+]
+
+[tool.hatch.build.targets.wheel]
+packages = [
+    "src"
+]
+
 [project.scripts]
 oceanbase_mcp_server = "oceanbase_mcp_server:main"
