Enhancement: Update pyproject.toml.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,8 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-packages = ["src/oceanbase_mcp_server"]
+packages = ["src/oceanbase_mcp_server", "src/ocp_mcp_server"]
 
 [project.scripts]
-oceanbase_mcp_server = "src.oceanbase_mcp_server:main"
+oceanbase_mcp_server = "oceanbase_mcp_server:main"
+ocp_mcp_server = "ocp_mcp_server:main"
