Enhancement: Update uv project configuration to support uv run command (#12) (#12)
* 修改 uv 项目配置，以支持 uv run

* fix uv dep

* format code

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,12 @@ email = "open_contact@oceanbase.com"
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
+[tool.hatch.build]
+include = [
+    "src/oceanbase_mcp_server/**/*.py",
+    "src/ocp_mcp_server/**/*.py"
+]
+
 [tool.hatch.build.targets.wheel]
 packages = ["src/oceanbase_mcp_server", "src/ocp_mcp_server"]
 
