--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,9 @@ requires-python = ">=3.11"
 dependencies = [
     "mcp[cli]>=1.0.0",
     "mysql-connector-python>=9.1.0",
-    "python-dotenv"
+    "python-dotenv",
+    "beautifulsoup4>=4.13.3",
+    "certifi>=2025.4.26",
 ]
 
 [[project.authors]]
