feat: add okctl mcp server (#15)
* feat: add okctl mcp server

* chore: update path for LICENCE in ocp readme

* fix: code format check

* add format check

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "mcp[cli]>=1.0.0",
+    "fastmcp>=2.5.1",
     "mysql-connector-python>=9.1.0",
     "python-dotenv",
     "beautifulsoup4>=4.13.3",
@@ -24,12 +25,14 @@ build-backend = "hatchling.build"
 [tool.hatch.build]
 include = [
     "src/oceanbase_mcp_server/**/*.py",
-    "src/ocp_mcp_server/**/*.py"
+    "src/ocp_mcp_server/**/*.py",
+    "src/okctl_mcp_server/**/*.py"
 ]
 
 [tool.hatch.build.targets.wheel]
-packages = ["src/oceanbase_mcp_server", "src/ocp_mcp_server"]
+packages = ["src/oceanbase_mcp_server", "src/ocp_mcp_server","src/okctl_mcp_server"]
 
 [project.scripts]
 oceanbase_mcp_server = "oceanbase_mcp_server:main"
 ocp_mcp_server = "ocp_mcp_server:main"
+okctl_mcp_server = "okctl_mcp_server:main"
