fix(pkg):bin file path (#26)

--- a/src/obcloud_mcp_server/tsconfig.json
+++ b/src/obcloud_mcp_server/tsconfig.json
@@ -3,9 +3,8 @@
     "outDir": "./dist",
     "rootDir": ".",
     "target": "ES2022",
-    "module": "Node16",
-    "moduleResolution": "Node16",
-    "types": ["node"],
+    "moduleResolution": "NodeNext",
+    "module": "NodeNext",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
@@ -15,14 +14,9 @@
     "pretty": false,
     "stripInternal": true,
     "newLine": "lf",
-    "typeRoots": ["./typing/*"]
+    "typeRoots": ["./typing/*", "./node_modules/@types"]
   },
-  "include": [
-    "src",
-    "src/typings.d.ts"
-  ],
+  "include": ["src", "src/typings.d.ts"],
   "files": ["src/typings.d.ts"],
-  "exclude": [
-    "node_modules"
-  ]
+  "exclude": ["node_modules"]
 }
