--- a/src/obcloud_mcp_server/package.json
+++ b/src/obcloud_mcp_server/package.json
@@ -1,38 +1,38 @@
 {
   "name": "@oceanbase/obcloud-mcp-server",
-  "version": "0.0.1",
+  "version": "0.0.7",
   "description": "MCP Cloud for OBCloud",
-  "main": "dist/index.js",
+  "main": "dist/src/index.js",
   "bin": {
-    "oceanbase-mcp-server": "./dist/index.js"
+    "obcloud-mcp-server": "./dist/src/index.js"
   },
   "type": "commonjs",
   "scripts": {
-    "build": "tsc && chmod +x dist/index.js",
+    "build": "tsc && shx chmod +x dist/**/*.js",
     "start": "node build/index.js",
     "watch": "tsc -w",
     "dev": "npx @modelcontextprotocol/inspector ts-node ./src/index.ts",
-    "pub": "npm publish --registry https://registry.npmjs.org"
+    "pub": "npm publish --registry https://registry.npmjs.org --access public"
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.10.2",
     "axios": "^1.8.4",
-    "axios-cookiejar-support": "^5.0.5",
     "dayjs": "^1.11.13",
     "dotenv": "^16.0.3",
+    "http-cookie-agent": "^7.0.1",
     "mysql2": "^3.14.0",
     "node-rsa": "^1.1.1",
-    "tough-cookie": "^5.1.2",
-    "urllib": "^4.6.11"
+    "tough-cookie": "^5.1.2"
   },
   "devDependencies": {
-    "@types/node": "^18.15.11",
+    "@types/node": "^22.15.30",
     "@types/node-rsa": "^1.1.4",
     "dotenv": "^16.5.0",
+    "shx": "^0.4.0",
     "typescript": "^5.0.4"
   },
   "repository": "git@code.alipay.com:oceanbase/mcp-server-oceanbase.git",
   "publishConfig": {
-    "registry": "https://registry.antgroup-inc.cn"
+    "registry": "https://registry.npmjs.org"
   }
 }
